# AFIP

./: .env.example  .gitignore  DOCUMENTACION.md  Modelo Excel -  Recupero Tasa de Estadistica.xlsx  README.md  VALIDACION_MAYO2025.md  abrir_panel_local.html  abrir_pipeline_local.html  ejecutar_fetch.bat  ejecutar_panel_web.bat  ejecutar_pipeline_mayo2025.bat  pyproject.toml
docs/: afip_arca_ws_referencia.md  comparativa_wsaa_pyafipws.md
docs/modelo/: README.md
docs/referencias/: wconsdeclaracion.wsdl
docs/referencias/pyafipws/: README.md
notebooks/: auditoria_tasa_estadistica.ipynb
scripts/: check_abril2025.py  check_di_abril.py  check_noviembre2025.py  check_ta.py  compare_mayo_vs_noviembre.py  debug_wsaa_once.py  dump_di_abril.py  inspect_nov2025_raw.py
src/tasa_estadistica/: __init__.py  _repo_path.py  backfill_runner.py  cli.py  fetch_runner.py
src/tasa_estadistica/arca/: __init__.py  auth_ticket_store.py  liquidaciones_client.py  moa_declaracion.py  soap_common.py  wsaa_client.py
tests/: test_backfill_endpoints.py  test_backfill_runner.py  test_backfill_state.py  test_date_policy.py  test_excel_export.py  test_excel_raw_flat.py  test_ic_tasa_report.py  test_liquidaciones_dedupe.py  test_moa_cancelaciones.py  test_moa_extra_inject.py  test_moa_fecha_coerce.py  test_moa_variantes_listado.py  test_recupero_column_kind_consistency.py  test_recupero_compare.py  test_recupero_display.py  test_recupero_excel.py  test_recupero_formulas_golden.py  test_tasa_mapper.py  test_web_fetch.py  test_web_panel.py  test_wsaa_parsing.py
tests/fixtures/: ta_sample.xml
(+25 files in other folders)
